<resources>
    <!--  关于界面 -->
    <string name="app_name">星校巴</string>
    <string name="company">星空学生创新中心</string>
    <string name="copyright">2008–2017 xingkong.us</string>
    <string name="introduce">功能介绍</string>

    <string name="map">定位</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="version">星校巴 Version: 1.0</string>
    <string name="tips">提示</string>
    <string name="isExit">是否退出程序？</string>
    <string name="isLogout">是否注销登陆？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="logout">注销登陆</string>
    <string name="send">发送</string>
    <string name="loading">加载中…</string>
    <string name="not_locate_me">不定位自己</string>

    <string name="input_username">请输入学号</string>
    <string name="input_password">请输入密码</string>
    <string name="input_yzm">输入验证码</string>

    <string name="success_login">登陆成功</string>
    <string name="success_register">注册成功</string>

    <string name="setting">设置</string>
    <string name="exit_logoff">关于 &amp; 退出</string>
    <string name="normal">常规</string>
    <string name="logout1">注销</string>

    <!--  错误信息 -->
    <string name="wrong_unknown">未知错误</string>
    <string name="wrong_connection">连接发生错误，请检查网络连接</string>


    <string name="wrong_login_0">登陆失败,用户名或者密码错误</string>
    <string name="wrong_login_1">用户名过长</string>
    <string name="wrong_login_2">密码过短</string>
    <string name="wrong_login_3">用户名或密码不能为空</string>

    <string name="wrong_register_0">账号已存在</string>
    <string name="wrong_register_1">用户名过长</string>
    <string name="wrong_register_2">密码过短</string>
    <string name="wrong_register_3">用户名或密码不能为空</string>
    <string name="wrong_register_4">两次输入的密码不一样</string>

    <string name="my_position">我的位置</string>
    <string name="back_to_campus">回到学校</string>

</resources>
