<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/map"
            android:icon="@drawable/ic_map"
            android:title="@string/map">
        </item>

    </group>

    <item android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/setting"
                android:icon="@drawable/ic_setting"
                android:title="@string/setting">
            </item>
        </menu>
    </item>

    <item android:title="@string/exit_logoff">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_about"
                android:title="@string/about">
            </item>
            <item
                android:id="@+id/exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/exit">
            </item>
        </menu>
    </item>

</menu>