<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:showDividers="middle|end"
                android:divider="@android:drawable/divider_horizontal_bright">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin"
                        android:text="@string/normal"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary" />

                    <Switch
                        android:id="@+id/sw_locate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin"
                        android:text="@string/not_locate_me" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin"
                        android:text="@string/logout1"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/tv_logout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin"
                        android:gravity="center"
                        android:text="@string/logout"
                        android:textColor="@color/red" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

</android.support.design.widget.CoordinatorLayout>