<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="us.xingkong.gcubusstudentclient.Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"

            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textColorHint="@color/yellow1"
                app:hintTextAppearance="@style/style1"
                android:layout_weight="0.33"
                android:id="@+id/til_username">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="16"
                    android:hint="@string/input_username"
                    android:id="@+id/et_username"
                    android:maxLines="1"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textColorHint="@color/yellow1"
                app:hintTextAppearance="@style/style1"
                app:passwordToggleEnabled="true"
                android:layout_weight="0.33"
                android:id="@+id/til_password">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="16"
                    android:inputType="textPassword"
                    android:hint="@string/input_password"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.33"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/yellow1"
                    app:hintTextAppearance="@style/style1"
                    app:passwordToggleEnabled="true"
                    android:layout_weight="0.7"
                    android:id="@+id/til_yzm">

                    <EditText
                        android:id="@+id/et_yzm"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLength="16"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:hint="@string/input_yzm"/>
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/yzm"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3" />

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="0.3"
                android:background="@color/bule1"
                android:text="@string/login"
                android:textColor="@color/white1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.36"/>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>
